cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(ChessGame)
set(RAYLIB external/raylib)
add_subdirectory(${RAYLIB})
include_directories(${RAYLIB}/src include)
link_libraries(raylib)
add_executable(ChessGame src/main.cpp src/ChessBoard.cpp src/ChessPiece.cpp)